add musical information endpoint
